--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@
   display: flex;
   flex-direction: column;
   box-sizing: border-box;
+  overflow-x: hidden;
 }
 
 html,
